[web] fixed not visible nav buttons in tablet

--- a/booking-web/src/styles/index.css
+++ b/booking-web/src/styles/index.css
@@ -46,10 +46,6 @@ a {
     font-size: 14px;
   }
 
-  /* .onDesktop {
-    display: block;
-  } */
-
   .onMobile {
     display: none;
   }
